syntax = "proto3";

option csharp_namespace = "Portfolio.ToDo.Auth";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}
